--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   	<default.encoding>UTF-8</default.encoding>
   	<java.version>1.8</java.version>
   </properties>
-  
+
   <profiles>
 
         <profile>
@@ -28,7 +28,8 @@
                 <repository>
                     <id>HDPublic</id>
                     <name>HDPublic</name>
-                    <url>http://repo.hortonworks.com/content/groups/public/</url>
+                    <url>http://repo.hortonworks.com/content/groups/public/</url> 
+                    <!--<url>file://D:\software(DevelopmentTool)\SecureCRT_x86_7.1.1.264_en\Client(me)\apache-maven-3.3.9\localrepository</url> -->
                 </repository>
 
                 <repository>
@@ -47,6 +48,21 @@
             <version>${hadoop.version}</version>
         </dependency>
         
+        <!-- lsg添加ctdfs-core包、ctdfs-mapreduce包依赖 -->
+        <dependency>
+			<groupId>com.ctg</groupId>
+			<artifactId>ctdfs-core</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<!-- <scope>compile</scope> -->
+		</dependency>
+        <!-- <dependency>
+			<groupId>com.ctg</groupId>
+			<artifactId>ctdfs-mapreduce</artifactId>
+			<version>2.0.0-SNAPSHOT</version> -->
+			<!-- <scope>compile</scope> -->
+		<!-- </dependency> -->
+        
+        
         <!-- lsg添加jdk.tools包依赖 -->
 		<dependency>
             <groupId>jdk.tools</groupId>
@@ -56,10 +72,17 @@
             <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
     	</dependency>
     	
+    	<!-- lsg 添加 hbase-client、hbase-server、hadoop-mapreduce-client-core包 -->
     	<dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>1.1.2.2.5.3.0-37</version>
+    	</dependency>
+    	<!-- lsg  -->
+    	<dependency>
+            <groupId>com.hadoop.gplcompression</groupId>
+            <artifactId>hadoop-lzo</artifactId>
+            <version>0.6.0.2.5.3.0-37</version>
     	</dependency>
     	
     	<dependency>
@@ -108,6 +131,10 @@
 	        <!--    <archive>
 		            <manifest>
 		            	<mainClass>org.exp.demos.mapreduce.CTDFSSmallFileAmount</mainClass>
+		            	<mainClass>org.exp.demos.hbase.FilterGarbageHDFSFile</mainClass>
+		            	<mainClass>org.exp.demos.hbase.ChainFilterGarbage</mainClass>
+		            	<mainClass>org.exp.demos.hbase.SpaceFilterGarbage</mainClass>
+		            	<mainClass>org.exp.demos.mapreduce.ChainRowkeyFilterGarbage</mainClass>
 		            </manifest>
 	            </archive>
 	             -->
